# FTL

./: .doxygen  Cargo.toml  Makefile  README.md  apt.txt  rust-toolchain.toml
.cargo/: config.toml
inc/: FTL.hpp
src/: FTL.cpp  Linux.cpp  bib.rs  config.rs  main.rs  nand.rs
