[package]
name        = "ftl"
description = "NAND Flash Translation Layer"
authors     = ["Dmitry Ponyatov <dponyatov@gmail.com>"]
repository  = "https://github.com/dponyatov/FTL"
license     = "MIT"
keywords    = ["nand", "flash", "FTL",
                "arm", "cortex-m", "runtime", "startup"]
categories  = ["embedded", "hardware-support", "no-std"]
version     = "0.0.1"
edition     = "2021"

[dependencies]
cargo-binutils = "0.3.6"

[target.'cfg(unix)'.dependencies]
fuse = "0.3.1"
pcap = "2.2.0"

# [dependencies.thumbv7m-none-eabi]
# mdr1986 = "*"
# cortex-m = "*"
# cortex-m-rt = "*"
# cortex-m-semihosting = "*"
# panic-halt = "*"
# 
# [dependencies.riscv32imc-unknown-none-elf]
# mik32 = "*"
